@@ -44,6 +44,8 @@ documents those changes that are of interest to users and administrators.
  -- Allow an advanced reservation to contain a license count of zero.
  -- Preserve non-KNL node features when updating the KNL node features for a
     multi-node job in which the non-KNL node features vary by node.
+ -- task/affinity plugin: Honor a job's --ntasks-per-socket and
+    --ntasks-per-core options in task binding.
 
 * Changes in Slurm 16.05.5
 ==========================
